# Speed-Test

./: Search Speed.ipynb  pandas_vectorize.ipynb  pyproject.toml
